Add transfer learning

--- a/03-AzureExperiment.ipynb
+++ b/03-AzureExperiment.ipynb
@@ -12,21 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failure while loading azureml_run_type_providers. Failed to load entrypoint automl = azureml.train.automl.run:AutoMLRun._from_run_dto with exception (azureml-dataprep 1.6.0 (/opt/conda/lib/python3.7/site-packages), Requirement.parse('azureml-dataprep<1.6.0a,>=1.4.10a'), {'azureml-automl-core'}).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import azureml.core\n",
     "from azureml.core import Workspace, Experiment\n",
-    "from azureml.widgets import RunDetails"
+    "from azureml.widgets import RunDetails\n",
+    "from azureml.core import Model"
    ]
   },
   {
@@ -126,10 +119,18 @@
     "dataset_labels = ws.datasets['fulltrain_labels']\n",
     "dataset_img = ws.datasets['fulltrain_img']\n",
     "\n",
+    "script_params = {\n",
+    "    '--img_size': 128,\n",
+    "    '--epoch': 30,\n",
+    "    '--batch_size': 32,\n",
+    "    '--transfer_learning': 'vgg16'\n",
+    "                }\n",
+    "transfer_learning\n",
+    "\n",
     "estimator = TensorFlow(source_directory='./experiments',\n",
     "                       entry_script='invasive_training.py',\n",
     "                       compute_target=cluster_name,\n",
-    "                       script_params = {'--img_size': 128, '--epoch': 30, '--batch_size': 32},\n",
+    "                       script_params=script_params,\n",
     "                       conda_packages=['scikit-learn', 'matplotlib', 'pillow'],\n",
     "                       framework_version='2.0',\n",
     "                       inputs=[dataset_img.as_named_input('images').as_mount(), dataset_labels.as_named_input('labels')]\n",
@@ -1487,15 +1488,73 @@
     }
    ],
    "source": [
-    "run.register_model(model_path=\"model\",\n",
-    "               model_name=\"InvasiveCNN\",\n",
-    "               tags={'AUC': metrics['AUC'], 'transfer-learning': False,\n",
-    "                     'image_size': metrics['image_size'], 'batch_size': metrics['batch_size'],\n",
-    "                     'epochs': metrics['epochs']},\n",
-    "               description=\"simple CNN\",\n",
-    "               model_framework='TensorFlow',\n",
-    "               model_framework_version='2.1.0',\n",
-    "                  )"
+    "# run.register_model(model_path=\"model\",\n",
+    "#                model_name=\"InvasiveCNN\",\n",
+    "#                tags={'AUC': metrics['AUC'], 'transfer-learning': False,\n",
+    "#                      'image_size': metrics['image_size'], 'batch_size': metrics['batch_size'],\n",
+    "#                      'epochs': metrics['epochs']},\n",
+    "#                description=\"simple CNN\",\n",
+    "#                model_framework='TensorFlow',\n",
+    "#                model_framework_version='2.1.0',\n",
+    "#                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = Model.list(ws)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Model(workspace=Workspace.create(name='Invasive', subscription_id='68bdd703-8837-469c-80bd-bfb35f3b886f', resource_group='ProjectGroup2'), name=InvasiveCNN, id=InvasiveCNN:2, version=2, tags={'AUC': '0.9659936675027756', 'transfer-learning': 'false', 'image_size': '(128, 128)', 'batch_size': '32', 'epochs': '30'}, properties={})"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'AUC': '0.9659936675027756',\n",
+       " 'transfer-learning': 'false',\n",
+       " 'image_size': '(128, 128)',\n",
+       " 'batch_size': '32',\n",
+       " 'epochs': '30'}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc=0\n",
+    "for model in models:\n",
+    "    if float(model.tags['AUC']) > auc:\n",
+    "        auc = float(model.tags['AUC'])\n",
+    "        best_model = model\n",
+    "best_model.tags"
    ]
   },
   {
