Capitalize model name

--- a/03-AzureExperiment.ipynb
+++ b/03-AzureExperiment.ipynb
@@ -123,7 +123,7 @@
     "    '--img_size': 128,\n",
     "    '--epoch': 30,\n",
     "    '--batch_size': 32,\n",
-    "    '--transfer_learning': 'vgg16'\n",
+    "    '--transfer_learning': 'VGG16'\n",
     "                }\n",
     "transfer_learning\n",
     "\n",
