Yes it's working as intended

--- a/04-deploy.ipynb
+++ b/04-deploy.ipynb
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running..............................................\n",
+      "Running............................................\n",
       "Succeeded\n",
       "ACI service creation operation finished, operation \"Succeeded\"\n",
       "Healthy\n"
@@ -166,43 +166,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-05-15T13:09:02,824592851+00:00 - rsyslog/run \n",
-      "2020-05-15T13:09:02,826233994+00:00 - iot-server/run \n",
-      "2020-05-15T13:09:02,825598977+00:00 - gunicorn/run \n",
-      "2020-05-15T13:09:02,893351242+00:00 - nginx/run \n",
+      "2020-05-15T13:31:38,512796545+00:00 - gunicorn/run \n",
+      "2020-05-15T13:31:38,513381549+00:00 - iot-server/run \n",
+      "2020-05-15T13:31:38,515438561+00:00 - rsyslog/run \n",
+      "2020-05-15T13:31:38,522003500+00:00 - nginx/run \n",
       "/usr/sbin/nginx: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib/libcrypto.so.1.0.0: no version information available (required by /usr/sbin/nginx)\n",
       "/usr/sbin/nginx: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib/libcrypto.so.1.0.0: no version information available (required by /usr/sbin/nginx)\n",
       "/usr/sbin/nginx: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\n",
       "/usr/sbin/nginx: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\n",
       "/usr/sbin/nginx: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib/libssl.so.1.0.0: no version information available (required by /usr/sbin/nginx)\n",
+      "EdgeHubConnectionString and IOTEDGE_IOTHUBHOSTNAME are not set. Exiting...\n",
+      "2020-05-15T13:31:38,956096402+00:00 - iot-server/finish 1 0\n",
+      "2020-05-15T13:31:38,969035179+00:00 - Exit code 1 is normal. Not restarting iot-server.\n",
       "Starting gunicorn 19.9.0\n",
-      "Listening at: http://127.0.0.1:31311 (14)\n",
+      "Listening at: http://127.0.0.1:31311 (11)\n",
       "Using worker: sync\n",
       "worker timeout is set to 300\n",
-      "Booting worker with pid: 29\n",
-      "EdgeHubConnectionString and IOTEDGE_IOTHUBHOSTNAME are not set. Exiting...\n",
-      "2020-05-15T13:09:06,950730827+00:00 - iot-server/finish 1 0\n",
-      "2020-05-15T13:09:06,951852456+00:00 - Exit code 1 is normal. Not restarting iot-server.\n",
+      "Booting worker with pid: 39\n",
       "Initialized PySpark session.\n",
       "Initializing logger\n",
       "Starting up app insights client\n",
       "Starting up request id generator\n",
       "Starting up app insight hooks\n",
       "Invoking user's init function\n",
-      "2020-05-15 13:09:19.967530: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib:/azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib:\n",
-      "2020-05-15 13:09:19.967571: E tensorflow/stream_executor/cuda/cuda_driver.cc:313] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2020-05-15 13:09:19.967606: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (wk-caas-b3df9d54f99b463abdb1d677410577d0-5c76bdd571782cf00d2d71): /proc/driver/nvidia/version does not exist\n",
-      "2020-05-15 13:09:19.967818: I tensorflow/core/platform/cpu_feature_guard.cc:143] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2020-05-15 13:09:19.976499: I tensorflow/core/platform/profile_utils/cpu_utils.cc:102] CPU Frequency: 2397220000 Hz\n",
-      "2020-05-15 13:09:19.977095: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x559896f49840 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2020-05-15 13:09:19.977171: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2020-05-15 13:31:42.681271: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib:/azureml-envs/azureml_a5f844aedbaa76f68aa8a50c193863c4/lib:\n",
+      "2020-05-15 13:31:42.681306: E tensorflow/stream_executor/cuda/cuda_driver.cc:313] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2020-05-15 13:31:42.681331: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (wk-caas-28cff2ffa041482bad6ea60564cb78db-0e27f076219edd685e794a): /proc/driver/nvidia/version does not exist\n",
+      "2020-05-15 13:31:42.681547: I tensorflow/core/platform/cpu_feature_guard.cc:143] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2020-05-15 13:31:42.689333: I tensorflow/core/platform/profile_utils/cpu_utils.cc:102] CPU Frequency: 2294685000 Hz\n",
+      "2020-05-15 13:31:42.690021: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x55cda3a81840 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2020-05-15 13:31:42.690043: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
       "Working directory\n",
       "/var/azureml-app\n",
       "./azureml-models/InvasiveCNN/2\n",
@@ -234,10 +234,10 @@
       "Scoring timeout is found from os.environ: 60000 ms\n",
       "Swagger file not present\n",
       "404\n",
-      "127.0.0.1 - - [15/May/2020:13:09:25 +0000] \"GET /swagger.json HTTP/1.0\" 404 19 \"-\" \"Go-http-client/1.1\"\n",
+      "127.0.0.1 - - [15/May/2020:13:32:02 +0000] \"GET /swagger.json HTTP/1.0\" 404 19 \"-\" \"Go-http-client/1.1\"\n",
       "Swagger file not present\n",
       "404\n",
-      "127.0.0.1 - - [15/May/2020:13:09:32 +0000] \"GET /swagger.json HTTP/1.0\" 404 19 \"-\" \"Go-http-client/1.1\"\n",
+      "127.0.0.1 - - [15/May/2020:13:32:07 +0000] \"GET /swagger.json HTTP/1.0\" 404 19 \"-\" \"Go-http-client/1.1\"\n",
       "\n"
      ]
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>invasive</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>name</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      invasive\n",
+       "name          \n",
+       "1            0\n",
+       "2            0\n",
+       "3            1\n",
+       "4            0\n",
+       "5            1\n",
+       "6            0\n",
+       "7            1\n",
+       "8            1\n",
+       "9            0\n",
+       "10           0"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "train_dir = \"./train_dataset\"\n",
+    "test_dir = \"./test_dataset\"\n",
+    "label_filename = os.path.join(train_dir, \"train_labels.csv\")\n",
+    "labels = pd.read_csv(label_filename, index_col=0)\n",
+    "labels.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +402,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'[[1.0]]'"
+       "'[[0.03900056704878807]]'"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "prediction: \"[[1.0]]\"\n"
+      "prediction: \"[[0.03900056704878807]]\"\n"
      ]
     }
    ],
